# user-registration-api

./: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py  users.py
app/clients/: mailpit_client.py
app/core/: config.py  enums.py  security.py  utils.py
app/db/: pool.py
app/dependencies/: deps.py
app/exceptions/: base.py  user.py
app/repositories/: user_repository.py
app/schemas/: health.py  user.py
app/services/: email_service.py  user_service.py
migrations/: init.sql
migrations/versions/: init_down.sql
tests/: conftest.py
tests/integration/: test_health.py  test_users.py
tests/unit/clients/: test_mailpit_client.py
tests/unit/core/: test_security.py  test_utils.py
tests/unit/db/: test_pool.py
tests/unit/dependencies/: test_deps.py
tests/unit/repositories/: test_user_repository.py
tests/unit/services/: test_email_service.py  test_user_service.py
