[tool.poetry]
name = "user-registration-api"
version = "0.1.0"
description = "User Registration API with email activation"
authors = ["Achraf Ben Hamou <achraf.ben130@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.14"
fastapi = "0.129.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
gunicorn = "^25.1.0"
python-multipart = "^0.0.19"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "26.1.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
